data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1205.wast
;; 6. **Test 6**:    - Description: Design a loop that calls an exported function which runs another loop and calls back the original module’s function.    - Specific Constraint: Both loops and cross-boundary function calls should maintain the stack correctly, especially after nested loop executions.    - Control Flow Relation: Verifies correct control flow and stack handling in nested loop scenarios involving cross-module calls.

(assert_invalid
  (module
    (func $exportedFunction (export "exportedFunction") (result i32)
      (loop (result i32)
        (call $nestedLoop)
      )
    )
    (func $nestedLoop (result i32)
      (loop (result i32)
        (call $exportedFunction)
      )
    )
    (start 0)
  )
  "type mismatch"
)